[package]
name    = "fetcher"
version = "0.1.0"
edition = "2021"
description = "Async OEM fetcher — NASA AROW + JPL HORIZONS fallback"

[[bin]]
name = "oem-fetch"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
